fix scrollbar

--- a/front/src/app/routes/workforce/workforce.page.scss
+++ b/front/src/app/routes/workforce/workforce.page.scss
@@ -10,7 +10,7 @@
 .header-list {
   border-bottom: 1px solid rgba(fColor(cblack), 0.2);
 
-  .activities {
+  .activities.is-not-ios {
     margin-right: 16px;
   }
 }
