--- a/front/src/app/styles/styles.scss
+++ b/front/src/app/styles/styles.scss
@@ -21,25 +21,3 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .flex-1 {
 	flex: 1;
 }
-
-*::-webkit-scrollbar {
-	background-color: #fff;
-	width: 16px;
-}
-
-/* background of the scrollbar except button or resizer */
-*::-webkit-scrollbar-track {
-	background-color: #fff;
-}
-
-/* scrollbar itself */
-*::-webkit-scrollbar-thumb {
-	background-color: #babac0;
-	border-radius: 16px;
-	border: 4px solid #fff;
-}
-
-/* set button(top and bottom of the scrollbar) */
-*::-webkit-scrollbar-button {
-	display:none;
-}
